# C-Object-Tracking-Surveillance-System-OpenCV-Qt-GUI-

./: CMakeLists.txt  Object Tracking App Documentation (1).docx
src/: MainWindow.cpp  MainWindow.h  VideoProcessor.cpp  VideoProcessor.h  main.cpp
